crates/macro-tools/tests/ui/deref/fail/name_value.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper {
    #[deref = "mut"]
    value: String,
}

fn main() {}
