crates/macro-tools/tests/ui/deref/fail/name_value.stderr
error: expected `#[deref]` or `#[deref(mut)]`
 --> tests/ui/deref/fail/name_value.rs:5:7
  |
5 |     #[deref = "mut"]
  |       ^^^^^^^^^^^^^
